--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@
     --white:#ffffff; 
     --lightBlue: #79c2d0; 
     --fontR:'DejaVu Sans Mono';
+    --lightgray: rgb(206, 242, 241);
 }
 *{
     font-family: var(--fontR);
@@ -46,38 +47,35 @@ nav a {
 /* ARTICLE-------ABOUT ME */
 .subtitle-parent{
     display:flex ;
-    width: 100%;
-    justify-content: space-between;
-    
    }
 
 .subtitle{
     border-color: black;
     display: flex;
-    flex-wrap: wrap;
-    width: 350px;
-    height: auto;
-    font-size: 50px;
+    font-size: 30px;
     margin:  3%;
-    padding: 2%;
-    border-right: 10px solid;
     text-align:end;
-    max-width: min-content;
+    width: 85px;
+
+    
 }
 .par{
-    flex-wrap: wrap;
-    flex-direction:column ;
-    width: 95%;
-    margin: auto;
+    display: flex;
     font-size: 20px;
     align-items: center;
-
+    padding: 5px;
+  
 }
-
 .project{
     display: flex;
     flex-wrap: wrap;
+    justify-content:center;
+    padding: 2%;
+    border-left: 3px solid black;
+    justify-items: end;
     align-items: center;
+
+
 }
 
 .project h1 , p {
@@ -95,31 +93,44 @@ nav a {
     justify-content: space-around;
  
 }
-/*
-.container img {
-    width: 100%;
-    max-width: 99%;
-    min-width: 230px;
-    min-height: 100px;
-    border: 8px solid lightblue;  
-   
-  }
+.text-blockFirst{
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color:var(--lightBlue);
+  color: var(--darkblue);
+  padding: 10px 25px 10px 25px;
   
-  .text-block {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    background-color: rgb(57, 159, 187);
-    color: rgb(9, 1, 73);
-    padding-left: 20px;
-    padding-right: 20px;
-  } */
-  .bigContainer img {
-    width: 100%;
-    
+}
+
+   .bigContainer{
+    position: relative;
+    flex: 0 0 1;
+    padding: 1px;
+    text-align: center;
+    justify-content: space-between;
+    justify-content: space-around;
+ 
+}
+.bigContainer img {
+    width: 720px;
+    height: 200px;
     border: 8px solid var(--lightBlue);  
    
   }
+.bigContainer a:hover{
+    filter: brightness(150%);
+}
+  
+.text-BigBlock {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color:var(--lightBlue);
+    color: var(--darkblue);
+    padding: 15px;
+  }
+
 
 .container{
     position: relative;
@@ -131,8 +142,7 @@ nav a {
  
 }
 .container img {
-    width: 100%;
-    width: 300px;
+    width: 350px;
     height: 100px;
     border: 8px solid var(--lightBlue);  
    
@@ -148,33 +158,25 @@ nav a {
     background-color:var(--lightBlue);
     color: var(--darkblue);
     padding: 15px;
-    /* padding-right: 20px; */
-  }
-
-  .contact-nav {
-    display:flex ;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    justify-content:flex-start;
-    font-size: 20px ;
-    margin: 2%;
 
   }
+
+ 
   .contact-nav li{
     display:flex ; 
     flex-wrap: wrap; 
     display:inline ;
     justify-content: space-around;
-    justify-content:flex-start ;
-    padding: 15px;
-    text-align: center;
+    padding: 5px;
+    
+  
   }
   .contact-nav a{
     color:var(--darkblue);
     text-decoration-line: underline;
-    text-decoration-thickness: 3px;
-    padding: 10px;
+    text-decoration-thickness: 4px;
+    padding: 40px;
+
   }
   
   
