--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root{
-    --darkblue:#272343; 
+    --darkblue:#191f49; 
     --white:#ffffff; 
-    --lightBlue: #79c2d0; 
+    --lightBlue: #b5d9e0; 
     --fontR:'DejaVu Sans Mono';
     --lightgray: rgb(206, 242, 241);
 }
@@ -61,6 +61,7 @@ nav a {
 }
 .par{
     display: flex;
+    width: 90%;
     font-size: 20px;
     align-items: center;
     padding: 5px;
@@ -69,11 +70,12 @@ nav a {
 .project{
     display: flex;
     flex-wrap: wrap;
-    justify-content:center;
+    /* justify-content:center; */
     padding: 2%;
     border-left: 3px solid black;
     justify-items: end;
     align-items: center;
+    width: 100%;
 
 
 }
@@ -103,7 +105,7 @@ nav a {
   
 }
 
-   .bigContainer{
+.bigContainer{
     position: relative;
     flex: 0 0 1;
     padding: 1px;
@@ -113,8 +115,10 @@ nav a {
  
 }
 .bigContainer img {
-    width: 720px;
-    height: 200px;
+    /* width: 720px;
+    height: 200px; */
+    width: 110%;
+    height: 20%;
     border: 8px solid var(--lightBlue);  
    
   }
@@ -144,7 +148,9 @@ nav a {
 .container img {
     width: 350px;
     height: 100px;
-    border: 8px solid var(--lightBlue);  
+    /* width: 100%;
+    height: 50%; */
+    border: 6px solid var(--lightBlue);  
    
   }
 .container a:hover{
